# dotfiles

./: .gitignore  README.md
dunst/: dunstrc
hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
hypr/scripts/: brightctl.sh  screencast.sh  screenshot.sh  theme.sh  volctl.sh  wallpaper.sh
hypr/sources/: cursor.conf  env.conf  keybinds.conf  monitors.conf  rules.conf  startup.conf  theming.conf
qt6ct/: qt6ct.conf
rofi/: config.rasi  rounded-common.rasi  rounded-dark.rasi
rofi/scripts/: calc.sh
rofi/themes/: rounded-light.rasi
sddm/: Main.qml  theme.conf
waybar/: config  config.jsonc  power_menu.xml  style-dark.css  style-light.css  style.css
waybar/dialaar/: meson.build
waybar/dialaar/include/: defines.h  elements.h  string_utils.h
waybar/dialaar/include/wifi/: config.h  entry.h  gui.h
waybar/dialaar/src/: elements.cpp  main.cpp
waybar/dialaar/src/wifi/: config.cpp  entry.cpp  gui.cpp
waybar/modules/: meson.build
waybar/modules/ThemeSwitcher/: main.c  module.h
waybar/scripts/: switch.sh  theme.sh
zed/: keymap.json  settings.json  tasks.json
